overflow fixed in panel.css

--- a/src/Components/Dashboard/Panel/Card/card.css
+++ b/src/Components/Dashboard/Panel/Card/card.css
@@ -1,6 +1,7 @@
 .Card {
   display: flex;
   flex-direction: column;
+  overflow: scroll;
 }
 .card-container {
   display: flex;
