--- a/src/Components/Dashboard/Panel/panel.css
+++ b/src/Components/Dashboard/Panel/panel.css
@@ -8,7 +8,6 @@
 .progress,
 .completed {
   width: calc(100% / 3);
-  height: 100%;
   overflow: scroll;
 }
 .working h2,
