--- a/src/Components/Dashboard/dashboard.css
+++ b/src/Components/Dashboard/dashboard.css
@@ -2,4 +2,5 @@
   display: flex;
   flex-direction: column;
   width: 1108px;
+  height: 704px;
 }
